Bugfix: Popup palette doesn't disappear when using keyboard shortcut

For pointer events we hide it in KisInputManager::eventFilterBeginImpl,
so we needed to handle keyboard events and SPen events
explicitly (like in 443600).

Perhaps a toggle function would suit more?

BUG:443631
(cherry picked from commit a056ae20fb5732326b8ac102df3fca4e615dc458)